# 1_year_of_AI_challenge

1 year of  AI challenges/: README.md
1 year of  AI challenges/day1/: README.md
1 year of  AI challenges/day10/: README.md  app.py  pyproject.toml  requirements.txt
1 year of  AI challenges/day11/: README.md  app.py  pyproject.toml  requirements.txt
1 year of  AI challenges/day12/: README.md  app.py  pyproject.toml
1 year of  AI challenges/day13/: app.py  pyproject.toml
1 year of  AI challenges/day14/: README.md  app.py  iris_pca.csv  iris_with_clusters.csv  pyproject.toml
1 year of  AI challenges/day15/: README.md  app.py  pyproject.toml  requirements.txt
1 year of  AI challenges/day16/: README.md  app.py  forecast.csv  pyproject.toml  requirements.txt
1 year of  AI challenges/day2/: requirements.txt
1 year of  AI challenges/day4/: pyproject.toml  spambase.csv
1 year of  AI challenges/day5/: app.py
1 year of  AI challenges/day6/: README.md  pyproject.toml  requirements.txt
1 year of  AI challenges/day7/: README.md  pyproject.toml
1 year of  AI challenges/day9/: README.md  app.py  pyproject.toml
1 year of challenges/day1/: app.py  pyproject.toml
1 year of challenges/day2/: README.md  app.py  pyproject.toml
1 year of challenges/day3/: README.md  app.py  pyproject.toml
1 year of challenges/day4/: README.md  app.py
1 year of challenges/day5/: pyproject.toml
1 year of challenges/day6/: app.py
1 year of challenges/day7/: app.py  requirements.txt
1 year of challenges/day8/: README.md  app.py  pyproject.toml
