[project]
name = "linear_regression_preprocessed"
version = "0.1.0"
description = "California Housing Price Prediction using Machine Learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.7.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.2",
]
